--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "email-validator": "^2.0.4",
     "mongoose": "^5.11.8",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   }
 }
